updated the homepage and the blogepage

--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -97,3 +97,18 @@
 .blog-details {
     text-align: center;
 }
+
+@media screen and (max-width:768px){
+
+ .blog-hero {
+  display: block;
+}
+
+ img {
+width:40%;
+ margin: auto -1.6rem;
+
+}
+
+
+}
