--- a/src/Components/Container/Home/whyus/whyus.css
+++ b/src/Components/Container/Home/whyus/whyus.css
@@ -5,6 +5,7 @@
 .title_text{
  color: black;
  text-align: center;
+ font-size: 1.5rem;
 }
 .content{
  display: flex;
@@ -28,11 +29,15 @@ margin: auto 0;
 }
 .description h4{
  color: black;
+ font-size: 1.5rem;
+ text-align: center;
+
 
 }
 .description p{
  color: black;
 line-height: 1.5rem;
+
 }
 /* Media query */
 @media screen and (max-width:768px) {
