--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -24,19 +24,21 @@ margin: auto;
 }
 
 button{
- padding: .7rem;
+ padding: 1rem;
  border-radius: 10px;
- font-size: .9rem;
- margin:1rem;
+ font-size: 1rem;
+ font-weight: bolder;
+ margin:1.7rem;
  background: yellow;
  border-color: white;
 }
 .text-content p{
  color: white;
+ font-size: 1.2rem;
 }
 .text-content h4{
  color: white;
- font-size: 1.5rem;
+ font-size: 2.3rem;
 }
 .text-content span{
  color: yellow;
